#1 Seperate the router file from the app.js, #2 adding throttling limiter to the api prefix apis

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.1",
     "node-input-validator": "^4.2.0"
   }
 }
