--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "author": "yunis.hawash@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.1",
-    "node-input-validator": "^4.2.0"
+    "jsonwebtoken": "^8.5.1",
+    "node-input-validator": "^4.2.0",
+    "node-uuid": "^1.4.8"
   }
 }
