--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-rate-limit": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
     "node-input-validator": "^4.2.0",
-    "node-uuid": "^1.4.8"
+    "node-uuid": "^1.4.8",
+    "request": "^2.88.2"
   }
 }
