--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "node-input-validator": "^4.2.0",
     "node-uuid": "^1.4.8",
+    "random-int": "^2.0.1",
     "request": "^2.88.2"
   }
 }
